# servant-auth

./: .gitignore  .travis.yml  README.md  RELEASE.md  cabal.haskell-ci  shell.nix  stack-ghc-7.10.3.yaml  stack-ghc-8.0.1.yaml  stack-ghc-8.0.2.yaml  stack-ghc-8.2.1.yaml  stack-ghc-8.4.3.yaml  stack-lts16.yaml  stack-servant-0.9.yaml  stack.yaml
.github/workflows/: ci.yml  haskell-ci.yml
servant-auth/: .gitignore  CHANGELOG.md  package.yaml  servant-auth.cabal
servant-auth-client/: CHANGELOG.md  package.yaml  servant-auth-client.cabal  stack.yaml
servant-auth-client/src/Servant/Auth/: Client.hs
servant-auth-client/src/Servant/Auth/Client/: Internal.hs
servant-auth-client/test/Servant/Auth/: ClientSpec.hs
servant-auth-docs/: CHANGELOG.md  package.yaml  servant-auth-docs.cabal
servant-auth-docs/src/Servant/Auth/: Docs.hs
servant-auth-foreign/: package.yaml  servant-auth-foreign.cabal
servant-auth-foreign/src/Servant/Auth/: Foreign.hs
servant-auth-foreign/test/test/Servant/Auth/: ForeignSpec.hs
servant-auth-server/: CHANGELOG.md  CHANGELOG.yaml  README.lhs  package.yaml  servant-auth-server.cabal
servant-auth-server/executables/: README.lhs
servant-auth-server/src/Servant/Auth/: Server.hs
servant-auth-server/src/Servant/Auth/Server/: Internal.hs  SetCookieOrphan.hs
servant-auth-server/src/Servant/Auth/Server/Internal/: AddSetCookie.hs  BasicAuth.hs  CachedRequest.hs  Class.hs  ConfigTypes.hs  Cookie.hs  FormLogin.hs  JWT.hs  OpenID.hs  ThrowAll.hs  Types.hs
servant-auth-server/src/Servant/Auth/Server/Internal/Orphans/: SetCookie.hs
servant-auth-server/test/Servant/Auth/: ServerSpec.hs
servant-auth-swagger/: CHANGELOG.md  package.yaml  servant-auth-swagger.cabal
servant-auth-swagger/src/Servant/Auth/: Swagger.hs
servant-auth-swagger/test/: Doctest.hs
servant-auth-swagger/test/Servant/Auth/: SwaggerSpec.hs
servant-auth/src/Servant/: Auth.hs
