name:           servant-auth-client
version:        0.3.3.0
synopsis:       servant-client/servant-auth compatibility
description:    This package provides instances that allow generating clients from
                <https://hackage.haskell.org/package/servant servant>
                APIs that use
                <https://hackage.haskell.org/package/servant-auth servant-auth's> @Auth@ combinator.
                .
                For a quick overview of the usage, see the <http://github.com/haskell-servant/servant-auth#readme README>.
category:       Web, Servant, Authentication
homepage:       http://github.com/haskell-servant/servant-auth#readme
bug-reports:    https://github.com/haskell-servant/servant-auth/issues
author:         Julian K. Arni
maintainer:     jkarni@gmail.com
copyright:      (c) Julian K. Arni
license:        BSD3
license-file:   LICENSE
tested-with:    GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC==8.4.3
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/haskell-servant/servant-auth

flag servant-client-core
  description: Use servant-client-core
  default: True
  manual: False

library
  hs-source-dirs:
      src
  default-extensions: AutoDeriveTypeable ConstraintKinds DataKinds DefaultSignatures DeriveFoldable DeriveFunctor DeriveGeneric DeriveTraversable FlexibleContexts FlexibleInstances FunctionalDependencies GADTs KindSignatures MultiParamTypeClasses OverloadedStrings RankNTypes ScopedTypeVariables TypeFamilies TypeOperators
  ghc-options: -Wall
  build-depends:
      base                >= 4.8  && < 4.12
    , text
    , bytestring
    , servant-auth        == 0.3.*
    , servant             >= 0.7  && < 0.15
  if flag(servant-client-core)
    cpp-options: -DHAS_CLIENT_CORE=1
    build-depends:
      servant-client-core >= 0.12 && < 0.15,
      containers
  else
    build-depends:
      servant-client      >= 0.7  && < 0.12

  exposed-modules:
      Servant.Auth.Client
      Servant.Auth.Client.Internal
  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  default-extensions: AutoDeriveTypeable ConstraintKinds DataKinds DefaultSignatures DeriveFoldable DeriveFunctor DeriveGeneric DeriveTraversable FlexibleContexts FlexibleInstances FunctionalDependencies GADTs KindSignatures MultiParamTypeClasses OverloadedStrings RankNTypes ScopedTypeVariables TypeFamilies TypeOperators
  ghc-options: -Wall
  build-tool-depends: hspec-discover:hspec-discover

  -- dependencies with bounds inherited from the library stanza
  build-depends:
      base
    , servant-client
    , servant-auth
    , servant
    , servant-auth-client

  -- test dependencies
  build-depends:
      hspec > 2 && < 3
    , QuickCheck >= 2.8 && < 2.12
    , aeson
    , bytestring
    , http-client
    , http-types
    , servant-auth-server
    , servant-server
    , time
    , transformers
    , wai
    , warp
    , jose
  other-modules:
      Servant.Auth.ClientSpec
  default-language: Haskell2010
