name:           servant-auth-client
version:        0.4.0.0
synopsis:       servant-client/servant-auth compatibility
description:    This package provides instances that allow generating clients from
                <https://hackage.haskell.org/package/servant servant>
                APIs that use
                <https://hackage.haskell.org/package/servant-auth servant-auth's> @Auth@ combinator.
                .
                For a quick overview of the usage, see the <http://github.com/haskell-servant/servant-auth#readme README>.
category:       Web, Servant, Authentication
homepage:       http://github.com/haskell-servant/servant-auth#readme
bug-reports:    https://github.com/haskell-servant/servant-auth/issues
author:         Julian K. Arni
maintainer:     jkarni@gmail.com
copyright:      (c) Julian K. Arni
license:        BSD3
license-file:   LICENSE
tested-with:    GHC == 8.0.2, GHC == 8.2.2, GHC==8.4.4, GHC==8.6.2
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/haskell-servant/servant-auth

library
  hs-source-dirs:
      src
  default-extensions: AutoDeriveTypeable ConstraintKinds DataKinds DefaultSignatures DeriveFoldable DeriveFunctor DeriveGeneric DeriveTraversable FlexibleContexts FlexibleInstances FunctionalDependencies GADTs KindSignatures MultiParamTypeClasses OverloadedStrings RankNTypes ScopedTypeVariables TypeFamilies TypeOperators
  ghc-options: -Wall
  build-depends:
      base                >= 4.9      && < 4.13
    , bytestring          >= 0.10.6.0 && < 0.11
    , containers          >= 0.5.6.2  && < 0.7
    , servant-auth        == 0.3.*
    , servant             >= 0.13     && < 0.17
    , servant-client-core >= 0.13     && < 0.17

  exposed-modules:
      Servant.Auth.Client
      Servant.Auth.Client.Internal
  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  default-extensions: AutoDeriveTypeable ConstraintKinds DataKinds DefaultSignatures DeriveFoldable DeriveFunctor DeriveGeneric DeriveTraversable FlexibleContexts FlexibleInstances FunctionalDependencies GADTs KindSignatures MultiParamTypeClasses OverloadedStrings RankNTypes ScopedTypeVariables TypeFamilies TypeOperators
  ghc-options: -Wall
  build-tool-depends: hspec-discover:hspec-discover >=2.5.5 && <2.8

  -- dependencies with bounds inherited from the library stanza
  build-depends:
      base
    , servant-client
    , servant-auth
    , servant
    , servant-auth-client

  -- test dependencies
  build-depends:
      hspec                >= 2.5.5    && < 2.8
    , QuickCheck           >= 2.11.3   && < 2.14
    , aeson                >= 1.3.1.1  && < 1.5
    , bytestring           >= 0.10.6.0 && < 0.11
    , http-client          >= 0.5.13.1 && < 0.7
    , http-types           >= 0.12.2   && < 0.13
    , servant-auth-server  >= 0.4.2.0  && < 0.5
    , servant-server       >= 0.13     && < 0.17
    , time                 >= 1.5.0.1  && < 1.9
    , transformers         >= 0.4.2.0  && < 0.6
    , wai                  >= 3.2.1.2  && < 3.3
    , warp                 >= 3.2.25   && < 3.3
    , jose                 >= 0.7.0.0  && < 0.9
  other-modules:
      Servant.Auth.ClientSpec
  default-language: Haskell2010
