name:           servant-auth-docs
version:        0.2.10.0
synopsis:       servant-docs/servant-auth compatibility
description:    This package provides instances that allow generating docs from
                <https://hackage.haskell.org/package/servant servant>
                APIs that use
                <https://hackage.haskell.org/package/servant-auth servant-auth's> @Auth@ combinator.
                .
                For a quick overview of the usage, see the <http://github.com/haskell-servant/servant-auth#readme README>.
category:       Web, Servant, Authentication
homepage:       http://github.com/haskell-servant/servant-auth#readme
bug-reports:    https://github.com/haskell-servant/servant-auth/issues
author:         Julian K. Arni
maintainer:     jkarni@gmail.com
copyright:      (c) Julian K. Arni
license:        BSD3
license-file:   LICENSE
tested-with:    GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC==8.4.3
build-type:     Custom
cabal-version:  >= 1.10
extra-source-files:
    CHANGELOG.md

custom-setup
  setup-depends:
    base, Cabal, cabal-doctest >=1.0.2 && <1.1

source-repository head
  type: git
  location: https://github.com/haskell-servant/servant-auth

library
  hs-source-dirs:
      src
  default-extensions: AutoDeriveTypeable ConstraintKinds DataKinds DefaultSignatures DeriveFoldable DeriveFunctor DeriveGeneric DeriveTraversable FlexibleContexts FlexibleInstances FunctionalDependencies GADTs KindSignatures MultiParamTypeClasses OverloadedStrings RankNTypes ScopedTypeVariables TypeFamilies TypeOperators
  ghc-options: -Wall
  build-depends:
      base >= 4.8 && < 4.12
    , text
    , servant-docs
    , servant
    , servant-auth == 0.3.*
    , lens
  exposed-modules:
      Servant.Auth.Docs
  default-language: Haskell2010

test-suite doctests
  type:                exitcode-stdio-1.0
  main-is:             doctests.hs
  build-depends:
    base,
    doctest >= 0.11.3 && <0.16,
    servant-auth-docs,
    QuickCheck >= 2.8 && <2.12,
    template-haskell
  ghc-options:         -Wall -threaded
  hs-source-dirs:      test
  default-language:    Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  default-extensions: AutoDeriveTypeable ConstraintKinds DataKinds DefaultSignatures DeriveFoldable DeriveFunctor DeriveGeneric DeriveTraversable FlexibleContexts FlexibleInstances FunctionalDependencies GADTs KindSignatures MultiParamTypeClasses OverloadedStrings RankNTypes ScopedTypeVariables TypeFamilies TypeOperators
  ghc-options: -Wall
  build-tool-depends: hspec-discover:hspec-discover

  -- dependencies with bounds inherited from the library stanza
  build-depends:
      base
    , text
    , servant-docs
    , servant
    , servant-auth
    , lens

  -- test dependencies
  build-depends:
      servant-auth-docs
    , hspec > 2 && < 3
    , QuickCheck >= 2.8 && < 2.12

  default-language: Haskell2010
