name:           servant-auth-server
version:        0.4.0.0
synopsis:       servant-server/servant-auth compatibility
description:    This package provides the required instances for using the @Auth@ combinator
                in your 'servant' server.
                .
                Both cookie- and token- (REST API) based authentication is provided.
                .
                For a quick overview of the usage, see the <http://github.com/haskell-servant/servant-auth#readme README>.
category:       Web, Servant, Authentication
homepage:       http://github.com/haskell-servant/servant-auth#readme
bug-reports:    https://github.com/haskell-servant/servant-auth/issues
author:         Julian K. Arni
maintainer:     jkarni@gmail.com
copyright:      (c) Julian K. Arni
license:        BSD3
license-file:   LICENSE
tested-with:    GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.3
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/haskell-servant/servant-auth

library
  hs-source-dirs:
      src
  default-extensions: AutoDeriveTypeable ConstraintKinds DataKinds DefaultSignatures DeriveFoldable DeriveFunctor DeriveGeneric DeriveTraversable FlexibleContexts FlexibleInstances FunctionalDependencies GADTs KindSignatures MultiParamTypeClasses OverloadedStrings RankNTypes ScopedTypeVariables TypeFamilies TypeOperators
  ghc-options: -Wall
  build-depends:
      base                    >= 4.8  && < 4.12
    , aeson                   >= 0.11 && < 2
    , base64-bytestring       >= 1    && < 2
    , blaze-builder           >= 0.4  && < 0.5
    , bytestring              >= 0.10 && < 0.11
    , bytestring-conversion   >= 0.3  && < 0.4
    , case-insensitive        >= 1.2  && < 1.3
    , cookie                  >= 0.4  && < 0.5
    , crypto-api              >= 0.13 && < 0.14
    , data-default-class      >= 0.0  && < 0.2
    , entropy                 >= 0.3  && < 0.5
    , http-api-data           >= 0.3.7 && < 0.4
    , http-types              >= 0.9  && < 0.13
    , jose                    >= 0.6  && < 0.8
    , lens                    >= 4    && < 5
    , monad-time              >= 0.2  && < 0.4
    , mtl                     >= 2.2  && < 2.3
    , servant                 >= 0.9.1  && < 0.15
    , servant-auth            == 0.3.*
    , servant-server          >= 0.9.1  && < 0.15
    , tagged                  >= 0.7.3 && < 0.9
    , text                    >= 1    && < 2
    , time                    >= 1.5  && < 1.9
    , unordered-containers    >= 0.2  && < 0.3
    , wai                     >= 3.2  && < 3.3
  if !impl(ghc >= 8.0)
    build-depends:
      semigroups >= 0.18.1 && <0.19
  exposed-modules:
      Servant.Auth.Server
      Servant.Auth.Server.Internal
      Servant.Auth.Server.Internal.AddSetCookie
      Servant.Auth.Server.Internal.BasicAuth
      Servant.Auth.Server.Internal.Class
      Servant.Auth.Server.Internal.ConfigTypes
      Servant.Auth.Server.Internal.Cookie
      Servant.Auth.Server.Internal.FormLogin
      Servant.Auth.Server.Internal.JWT
      Servant.Auth.Server.Internal.ThrowAll
      Servant.Auth.Server.Internal.Types
      Servant.Auth.Server.SetCookieOrphan
  default-language: Haskell2010

test-suite readme
  type: exitcode-stdio-1.0
  main-is: README.lhs
  default-extensions: AutoDeriveTypeable ConstraintKinds DataKinds DefaultSignatures DeriveFoldable DeriveFunctor DeriveGeneric DeriveTraversable FlexibleContexts FlexibleInstances FunctionalDependencies GADTs KindSignatures MultiParamTypeClasses OverloadedStrings RankNTypes ScopedTypeVariables TypeFamilies TypeOperators
  ghc-options: -Wall -pgmL markdown-unlit
  build-tool-depends: markdown-unlit:markdown-unlit
  build-depends:
      base
    , servant-auth
    , servant-auth-server
    , servant-server
    , aeson
    , mtl
    , warp
    , transformers
    , markdown-unlit
  default-language: Haskell2010
  if impl(ghcjs)
    buildable: False

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  default-extensions: AutoDeriveTypeable ConstraintKinds DataKinds DefaultSignatures DeriveFoldable DeriveFunctor DeriveGeneric DeriveTraversable FlexibleContexts FlexibleInstances FunctionalDependencies GADTs KindSignatures MultiParamTypeClasses OverloadedStrings RankNTypes ScopedTypeVariables TypeFamilies TypeOperators
  ghc-options: -Wall
  build-tool-depends: hspec-discover:hspec-discover

  -- dependencies with bounds inherited from the library stanza
  build-depends:
      base
    , aeson
    , bytestring
    , case-insensitive
    , jose
    , lens
    , mtl
    , time
    , http-types
    , wai
    , servant-server
    , transformers

  -- test dependencies
  build-depends:
      servant-auth-server
    , hspec > 2 && < 3
    , QuickCheck >= 2.8 && < 2.12
    , http-client >= 0.4 && < 0.6
    , lens-aeson
    , warp
    , wreq
  other-modules:
      Servant.Auth.ServerSpec
  default-language: Haskell2010
