name:           servant-auth
version:        0.3.2.0
synopsis:       Authentication combinators for servant
description:    This package provides an @Auth@ combinator for 'servant'. This combinator
                allows using different authentication schemes in a straightforward way,
                and possibly in conjunction with one another.
                .
                'servant-auth' additionally provides concrete authentication schemes, such
                as Basic Access Authentication, JSON Web Tokens, and Cookies.
                .
                For more details on how to use this, see the <http://github.com/haskell-servant/servant-auth#readme README>.
category:       Web, Servant, Authentication
homepage:       http://github.com/haskell-servant/servant-auth#readme
bug-reports:    https://github.com/haskell-servant/servant-auth/issues
author:         Julian K. Arni
maintainer:     jkarni@gmail.com
copyright:      (c) Julian K. Arni
license:        BSD3
license-file:   LICENSE
tested-with:    GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC==8.4.3
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/haskell-servant/servant-auth

library
  hs-source-dirs:
      src
  default-extensions: AutoDeriveTypeable ConstraintKinds DataKinds DefaultSignatures DeriveFoldable DeriveFunctor DeriveGeneric DeriveTraversable FlexibleContexts FlexibleInstances FunctionalDependencies GADTs KindSignatures MultiParamTypeClasses OverloadedStrings RankNTypes ScopedTypeVariables TypeFamilies TypeOperators
  ghc-options: -Wall
  build-depends:
      base >= 4.8 && < 4.12
  exposed-modules:
      Servant.Auth
  default-language: Haskell2010
